--- a/resources/assets/css/vendor.css
+++ b/resources/assets/css/vendor.css
@@ -1,1 +1,2 @@
 @import '../../../node_modules/datatables.net-bs/css/dataTables.bootstrap.css';
+@import '../../../node_modules/prismjs/themes/prism-dark.css';
